RESOLVED FIXED 216703
Regression(r265280) Web Audio sources malfunction when disconnected from the audio graph
https://bugs.webkit.org/show_bug.cgi?id=216703
Summary Regression(r265280) Web Audio sources malfunction when disconnected from the ...
Justin Uberti
Reported 2020-09-18 10:05:48 PDT
Observed in STP 113 and iOS14 GA. Does not occur in Chrome or Safari 13. When using a Web Audio graph of the form: (BufferSource) -> (MediaStreamDestination) -> (HTMLMediaElement) disconnecting the BufferSource from the graph causes a malfunction, and garbage audio to be fed to the HTMLMediaElement. Setting HTMLMediaElement.srcObject = null works around the issue. Demo: https://jsfiddle.net/juberti/dev32of4/
Attachments
Patch (3.77 KB, patch)
2020-09-24 02:22 PDT, youenn fablet
no flags
Radar WebKit Bug Importer
Comment 1 2020-09-18 10:08:12 PDT
Chris Dumez
Comment 2 2020-09-23 16:05:03 PDT
I am able to reproduce. Thank you for the reproduction case, I will investigate.
Chris Dumez
Comment 3 2020-09-23 16:26:52 PDT
This is a regression from http://trac.webkit.org/changeset/265280.
youenn fablet
Comment 4 2020-09-24 02:22:37 PDT
EWS
Comment 5 2020-09-24 08:11:35 PDT
Committed r267530: <https://trac.webkit.org/changeset/267530> All reviewed patches have been landed. Closing bug and clearing flags on attachment 409546 [details].
Note You need to log in before you can comment on or make changes to this bug.