Cherry-pick r267530. rdar://problem/69594070

Regression(r265280) Web Audio sources malfunction when disconnected from the audio graph
    https://bugs.webkit.org/show_bug.cgi?id=216703
    <rdar://problem/69158436>

    Reviewed by Eric Carlson.

    In case of an audio source that stops producing data, but does not end or mute the track,
    we would continuously try to read the data until getting to the end of the data.
    When reaching the end of the data, we would return silence and go back in time a little bit
    to restart playing with some margin. This allows to read just one chunk of audio until we are back to the end of data.

    We fix this by storing the end of the data counter when reaching it.
    When trying to pull some more data, we will go back in time a little bit only if some more data was added in the meantime.
    Otherwise, we just output silence.

    Covered by manual test.

    * platform/audio/mac/AudioSampleDataSource.h:
    * platform/audio/mac/AudioSampleDataSource.mm:
    (WebCore::AudioSampleDataSource::pullSamplesInternal):

    Canonical link: https://commits.webkit.org/229712@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@267530 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/228499.181@safari-610-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-610-branch@267686 268f45cc-cd09-0410-ab3c-d52691b4dbfc